fix: struct and sql file
