# docs/swagger.json
@@ -3478,9 +3478,6 @@
                 "disaster_id": {
                     "type": "integer"
                 },
-                "donor_id": {
-                    "type": "integer"
-                },
                 "location": {
                     "type": "string"
                 },
@@ -3489,6 +3486,9 @@
                 },
                 "status": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
